--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,27 @@
 sudo: required
 services:
   - docker
+env:
+    global:
+      - SHA=$(get rev-parse HEAD)
+      - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_86ee83302534_key -iv $encrypted_86ee83302534_iv -in tok.json.enc -out tok.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gloud components update kubectl
   - gcloud auth aactivate-service-account --key-file service-account.json
+  - gcloud config set project ultimate-ascent-295611
+  - gcloud config set compute/zone europe-west2-a
+  - gloud container clusters get credentials multi-cluster
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker build -t krykunov/react-test -f ./client/Dockerfile.dev ./client
+
+script:
+  - docker run -e CI=true krykunov/react-test npm test -- --coverage
+
+deploy:
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    branch: master
