--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_86ee83302534_key -iv $encrypted_86ee83302534_iv -in tok.json.enc -out tok.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
-  - gloud components update kubectl
+  - gcloud components update kubectl
   - gcloud auth aactivate-service-account --key-file service-account.json
   - gcloud config set project ultimate-ascent-295611
   - gcloud config set compute/zone europe-west2-a
