--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
-  - gcloud auth aactivate-service-account --key-file service-account.json
+  - gcloud auth activate-service-account --key-file tok.json
   - gcloud config set project ultimate-ascent-295611
   - gcloud config set compute/zone europe-west2-a
   - gloud container clusters get credentials multi-cluster
