--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - gcloud auth activate-service-account --key-file tok.json
   - gcloud config set project ultimate-ascent-295611
   - gcloud config set compute/zone europe-west2-a
-  - gloud container clusters get credentials multi-cluster
+  - gcloud container clusters get credentials multi-cluster
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t krykunov/react-test -f ./client/Dockerfile.dev ./client
 
