--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 env:
     global:
-      - SHA=$(get rev-parse HEAD)
+      - SHA=$(git rev-parse HEAD)
       - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_86ee83302534_key -iv $encrypted_86ee83302534_iv -in tok.json.enc -out tok.json -d
